--- a/LatvTemp.html
+++ b/LatvTemp.html
@@ -70,18 +70,19 @@
         </div>
         <div class="row">
             <div class="col-8">
-                    <img src=".\visualizations\tempvslat.png" class="img-fluid" alt="tempvslat">
+                    <img src=".\visualizations\tempvslat.png" class="img-fluid" alt="tempvslat"> <hr>
 
-                    <p>This scatter plot graph shows the latitude and max temperature for each city on the date the data was pulled. Using a scatter plot allows for 
-                      an easy visual and quick analysis on whether a cities latitude(distance from equator) impacts its max temperature.</p>
-                    <p><strong>Analysis:</strong> While the temperatures above 40&#8457 seem to be semi-uniform; only the Northern Hemisphere has max 
+                    <p3>This scatter plot graph shows the latitude and max temperature for each city on the date the data was pulled. Using a scatter plot allows for 
+                      an easy visual and quick analysis on whether a cities latitude(distance from equator) impacts its max temperature. 
+                      <hr>
+                    <strong>Analysis:</strong> While the temperatures above 40&#8457 seem to be semi-uniform; only the Northern Hemisphere has max 
                       temperatures below 40&#8457 on the date pulled.  
-                    </p>
+                    </p3> <hr>
 
-                    <img src=".\visualizations\combo.png" class="img-fluid" alt="combo">
-                    <p2>This graph is the combination of two graphs; one plotted the Northern Hemisphere,
+                    <img src=".\visualizations\combo.png" class="img-fluid" alt="combo"> <hr>
+                    <p2 class="text-break">This graph is the combination of two graphs; one plotted the Northern Hemisphere,
                       the other plotted the Southern Hemisphere.  They both have their linear regression lines plotted,
-                      which help highlight the fact that the max temp. gets higher as the latitude approaches 0. 
+                      which help highlight the fact that the max temp. gets higher as the latitude approaches the equator. 
                     </p2>
             </div>
             <div class="col-4 bg-info" id="gthumbnails">
