--- a/LatvWind.html
+++ b/LatvWind.html
@@ -70,20 +70,20 @@
         </div>
         <div class="row">
             <div class="col-8">
-                    <img src=".\visualizations\windvslat.png" class="img-fluid" alt="LatvWind">
+                    <img src=".\visualizations\windvslat.png" class="img-fluid" alt="LatvWind"> <hr>
 
-                    <p>This graph shows cities latitude vs their windiness or wind speed in mph.  While
+                    <p3>This graph shows cities latitude vs their windiness or wind speed in mph.  While
                       the graph shows slightly more plots of data on the right side of the graph or Northern Hemisphere,
                       there does not seem to be enough data to show causation.
-                    </p>
+                    </p3>
                     <hr>
-                    <p>*Interesting note - the only wind speed above 25 mph(on the day the data was pulled) is found in the Northern Hemisphere.</p>
+                    <p3>*Interesting note - the only wind speed above 25 mph(on the day the data was pulled) is found in the Northern Hemisphere.</p3>
                     <hr>
                     <p2>The image below shows the wind patterns across the globe.  Latitude seems to have 
                       something to do with windiness, but it is not the only thing that affects windiness according to:
                       https://www.eoas.ubc.ca/courses/atsc113/sailing/met_concepts/09-met-winds/9a-global-wind-circulations/. 
-                      <hr> Which is also where I got the image from below on 11/17/2020.
-                    </p2>
+                      <hr> Which is also where I got the image below from on 11/17/2020.
+                    </p2><hr>
 
                     <img src=".\visualizations\wind_pattern.png" class="img-fluid" alt="Wpattern">
 
