--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               an easy visual and quick analysis on whether a cities latitude(distance from equator) impacts X(the weather). </p1>
               <hr>
               <p1 class="text-teal" class="text-break">In these graphs and analysis the study was focused on paying particular attention to how the weather changed the 
-              closer a city got to the equator or a latitude of zero.  The study pulled four different types of weather data- temperature, humidity,
+              closer a city is to the equator or a latitude of zero.  The study pulled four different types of weather data- temperature, humidity,
               windiness, and cloudiness. </p1>
             </div>
 
