--- a/LatvTemp.html
+++ b/LatvTemp.html
@@ -75,14 +75,15 @@
                     <p3>This scatter plot graph shows the latitude and max temperature for each city on the date the data was pulled. Using a scatter plot allows for 
                       an easy visual and quick analysis on whether a cities latitude(distance from equator) impacts its max temperature. 
                       <hr>
-                    <strong>Analysis:</strong> While the temperatures above 40&#8457 seem to be semi-uniform; only the Northern Hemisphere has max 
-                      temperatures below 40&#8457 on the date pulled.  
+                    <strong>Analysis:</strong> While the temperatures above 40&#8457 seem to be semi-uniform, only the Northern Hemisphere has max 
+                      temperatures below 40&#8457 on the date pulled.  This could be because of the earth's tilt at the time the data was collected.
+                      The temperature getting higher as the lattitude gets closer to zero is a good sign of correlation between latitude and temperature.
                     </p3> <hr>
 
                     <img src=".\visualizations\combo.png" class="img-fluid" alt="combo"> <hr>
                     <p2 class="text-break">This graph is the combination of two graphs; one plotted the Northern Hemisphere,
-                      the other plotted the Southern Hemisphere.  They both have their linear regression lines plotted,
-                      which help highlight the fact that the max temp. gets higher as the latitude approaches the equator. 
+                      the other plotted the Southern Hemisphere.  They both have their linear regression lines plotted;
+                      which help highlight the fact that the max temperature gets higher as the latitude approaches the equator. 
                     </p2>
             </div>
             <div class="col-4 bg-info" id="gthumbnails">
