--- a/LatvWind.html
+++ b/LatvWind.html
@@ -81,8 +81,8 @@
                     <hr>
                     <p2>The image below shows the wind patterns across the globe.  Latitude seems to have 
                       something to do with windiness, but it is not the only thing that affects windiness according to:
-                      https://www.eoas.ubc.ca/courses/atsc113/sailing/met_concepts/09-met-winds/9a-global-wind-circulations/. 
-                      <hr> Which is also where I got the image below from on 11/17/2020.
+                      <a href="https://www.eoas.ubc.ca/courses/atsc113/sailing/met_concepts/09-met-winds/9a-global-wind-circulations/"><q>Weather for Sailing, Flying, and Snow Sports</q></a>.
+                     <hr>image below is also from <q>Weather for Sailing, Flying and Snow Sports</q> retrieved 11/17/2020.
                     </p2><hr>
 
                     <img src=".\visualizations\wind_pattern.png" class="img-fluid" alt="Wpattern">
